force-app/main/default/objects/Train_Fare__c/Train_Fare__c.object-meta.xml
<CustomObject>
    <label>Train_Fare</label>
    <nameField>
        <label>Train_Fare Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Train_Fares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>