force-app/main/default/objects/Train_Fare__c/fields/Base_Fare__c.field-meta.xml
<CustomField>
    <fullName>Base_Fare__c</fullName>
    <label>Base_Fare</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>