force-app/main/default/objects/Train_Fare__c/fields/Coach_Type__c.field-meta.xml
<CustomField>
    <fullName>Coach_Type__c</fullName>
    <label>Coach_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sleeper</fullName>
            </value>
            <value>
                <fullName>1A</fullName>
            </value>
            <value>
                <fullName>2A</fullName>
            </value>
            <value>
                <fullName>3A</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>