force-app/main/default/objects/Train_Fare__c/fields/Coach_Type_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Coach_Type_Multiplier__c</fullName>
    <label>Coach_Type_Multiplier</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>