force-app/main/default/objects/Train_Fare__c/fields/Distance_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Distance_Multiplier__c</fullName>
    <label>Distance_Multiplier</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>