force-app/main/default/objects/Train_Fare__c/fields/Train__c.field-meta.xml
<CustomField>
    <fullName>Train__c</fullName>
    <label>Train</label>
    <referenceTo>Train__c</referenceTo>
    <relationshipLabel>Train_Fares</relationshipLabel>
    <relationshipName>Train_Fares</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>